kubernetes/infrastructure/base/longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.${cluster_domain}`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
