kubernetes/infrastructure/base/longhorn/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.theblacklodge.dev`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
